--- a/cursoJS/psoft/exemploSala.html
+++ b/cursoJS/psoft/exemploSala.html
@@ -7,7 +7,7 @@
     <script>
         let valores;
 
-        let promise = fetch('/dados.json')
+        let promise = fetch('/~psoft-pages/cursoJS/psoft/dados.json')
         
         promise.then((response)=>{
             response.json()
