--- a/exerciciosPsoft/index.html
+++ b/exerciciosPsoft/index.html
@@ -33,6 +33,6 @@
         <h3 id="velocidade"></h3>
         <p id="resposta"></p>
     </div>
-    <script src="/app.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
