--- a/exerciciosPsoft/index2.html
+++ b/exerciciosPsoft/index2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="">
-    <title>Document</title>
+    <title>Sintomas</title>
 </head>
 <body>
     <p>Será que a partir de <em>algumas dicas</em> você seria capaz de descobrir de qual doença estamos falando?</p>
