Exercício de Psoft

--- a/exerciciosPsoft/index2.html
+++ b/exerciciosPsoft/index2.html
@@ -26,7 +26,7 @@
             <input type="radio" name="doença" value="Alergia" id="Alergia">
             <label for="Alergia">Alergia</label><br><br>
             
-            <input type="button" value="Enviar" id="button" onclick="getValue()">
+            <input type="button" value="Enviar" id="button">
         </div>
         <h1 id="acertou"></h1>
     </form>
