--- a/exerciciosPsoft/index2.html
+++ b/exerciciosPsoft/index2.html
@@ -9,10 +9,10 @@
 <body>
     <p>Será que a partir de <em>algumas dicas</em> você seria capaz de descobrir de qual doença estamos falando?</p>
     <form id="form">
-        <h5 id="dica1"></h5>
-        <h4 id="dica2"></h4>
-        <h3 id="dica3"></h3>
-        <h2 id="dica4"></h2>
+        <h5 id="dica1">Dica 1:</h5>
+        <h4 id="dica2">Dica 2:</h4>
+        <h3 id="dica3">Dica 3:</h3>
+        <h2 id="dica4">Dica 4:</h2>
         <div>
             <input type="radio" name="doença" value="gripe" id="gripe">
             <label for="gripe">Gripe</label><br>
