--- a/exerciciosPsoft/index2.html
+++ b/exerciciosPsoft/index2.html
@@ -44,7 +44,7 @@
         <div id="after">
             <p>Deseja jogar novamente?</p>
             <input type="button" value="Sim" id="sim">
-            <input type="button" value="Não" id="nao">
+            <input type="button" value="Não" id="nao" onclick="location.href='https://www.google.com.br'">
         </div>
     </form>
     <script src="app2.js"></script>
