--- a/exerciciosPsoft/index2.html
+++ b/exerciciosPsoft/index2.html
@@ -34,6 +34,7 @@
         <h1 id="acertou"></h1>
     </form>
     <div id="after">
+        <p id="parabens"></p>
         <input type="button" value="Jogar novamente" id="sim">
         <input type="button" value="Sair" id="nao">
     </div>
