--- a/homepage/index.html
+++ b/homepage/index.html
@@ -8,6 +8,7 @@
 <body>
     <header>Header</header>
     <main>
+        <strong>Página de Erick</strong>
         <p>Exemplo de parágrafo</p>
     </main>
     <footer>Footer</footer>
