--- a/homepage/index.html
+++ b/homepage/index.html
@@ -8,8 +8,8 @@
 <body>
     <header>Header</header>
     <main>
-        <strong>Página de Erick</strong>
-        <p>Exemplo de parágrafo</p>
+        <h6>Página de Erick</h6>
+        <p>Quando eu crescer eu quero ser inteligente igual a Dalton..</p>
     </main>
     <footer>Footer</footer>
 </body>
