--- a/cursoJS/aula10/ex001.html
+++ b/cursoJS/aula10/ex001.html
@@ -28,7 +28,7 @@
     <input type="button" id="comecar" value="Comecar"></button>
     <input type="button" id="resetar" value="Resetar"></button>
     <input type="button" id="pausar" value="Pausar"></button>
-    <script src="/psoft/basico.js"></script>
+    <script src="basico.js"></script>
 </body>
 
 </html>
